# inf_quiz_py

./: Makefile  README.md  __init__.py  pyproject.toml
