[tool.poetry]
name = "inf-quiz-py"
version = "0.1.0"
description = ""
authors = ["Groznov Artem <f.o.r.pointblank@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^24.4"
ruff = "^0.1.1"
mypy = "^1.10"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
